[ozone/wayland] Fix wayland keyboard event timestamps

On using keyboard with Wayland, we get performance timing asserts. It is
caused by inconsistency in how we generate the timestamps from the
native events. This replicates the reasoning of Windows
EventTimeFromMSG, as the problem is the same. For platform
independent events we use TimeTicks::Now, but for native events
we use a different time origin.

So let's use for keyboard also EventTimeForNow().

Bug: 891205
Change-Id: Iaf1c2e106ea39c7ea3fc6da5c5ab647109f87c7a
Reviewed-on: https://chromium-review.googlesource.com/1256569
Reviewed-by: Maksim Sisov <msisov@igalia.com>
Commit-Queue: José Dapena Paz <jose.dapena@lge.com>
Cr-Commit-Position: refs/heads/master@{#595790}